--- a/SpfxWebpart/package.json
+++ b/SpfxWebpart/package.json
@@ -15,6 +15,8 @@
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "office-ui-fabric-react": "6.214.0",
+    "@fluid-experimental/fluid-framework": "^0.45.0",
+    "@fluid-experimental/frs-client": "^0.45.0",
     "@microsoft/sp-core-library": "1.11.0",
     "@microsoft/sp-property-pane": "1.11.0",
     "@microsoft/sp-webpart-base": "1.11.0",
@@ -28,11 +30,12 @@
     "@microsoft/sp-tslint-rules": "1.11.0",
     "@microsoft/sp-module-interfaces": "1.11.0",
     "@microsoft/sp-webpart-workbench": "1.11.0",
-    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
+    "@microsoft/rush-stack-compiler-3.9": "0.4.47",
     "gulp": "~3.9.1",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
+    "typescript": "~3.9",
     "@types/webpack-env": "1.13.1",
     "@types/es6-promise": "0.0.33"
   }
