--- a/build.yml
+++ b/build.yml
@@ -61,6 +61,18 @@ steps:
       workingDir: ${{ parameter.Value }}
       customCommand: 'run build'
   - task: Npm@1
+    displayName: Lint - ${{ parameter.Value }}
+    inputs:
+      command: 'custom'
+      workingDir: ${{ parameter.Value }}
+      customCommand: 'run lint'
+  - task: Npm@1
+    displayName: Test - ${{ parameter.Value }}
+    inputs:
+      command: 'custom'
+      workingDir: ${{ parameter.Value }}
+      customCommand: 'run test'
+  - task: Npm@1
     displayName: Test - ${{ parameter.Value }}
     inputs:
       command: 'custom'
