--- a/audience-demo/package.json
+++ b/audience-demo/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:server": "npx @fluidframework/azure-local-service@latest",
-    "test:report": "echo No test for this example"
+    "test:report": "echo No test for this example",
+    "lint": "echo No lint for this example"
   },
   "browserslist": {
     "production": [
