--- a/multi-framework-diceroller/package.json
+++ b/multi-framework-diceroller/package.json
@@ -11,7 +11,8 @@
         "start": "concurrently \"npm:start:server\" \"npm:start:client\"",
         "start:client": "webpack serve",
         "start:server": "npx tinylicious",
-        "test:report": "echo No test for this example"
+        "test:report": "echo No test for this example",
+        "lint": "echo No lint for this example"
     },
     "dependencies": {
         "@babel/preset-react": "^7.14.5",
