--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -15,7 +15,8 @@
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "test:report": "echo No test for this example"
+    "test:report": "echo No test for this example",
+    "lint": "echo No lint for this example"
   },
   "browserslist": {
     "production": [
