--- a/angular-demo/package.json
+++ b/angular-demo/package.json
@@ -33,6 +33,9 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/debug": "^4.1.7",
     "@types/node": "^12.11.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "jest": "^26.6.3",
+    "jest-puppeteer": "^4.3.0",
+    "puppeteer": "^1.20.0"
   }
 }
