--- a/multi-framework-diceroller/package.json
+++ b/multi-framework-diceroller/package.json
@@ -37,11 +37,7 @@
         "webpack": "^4.46.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0",
-        "prettier": "^2.7.1",
-        "jest": "^26.6.3",
-        "jest-puppeteer": "^4.3.0",
-        "puppeteer": "^1.20.0",
-        "start-server-and-test": "^1.11.6"
+        "prettier": "^2.7.1"
     },
     "prettier": {
         "trailingComma": "es5",
