--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -15,12 +15,14 @@
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "test:report": "echo No test for this example",
+    "test:report": "",
     "format": "npm run prettier:fix",
     "lint": "npm run prettier",
     "lint:fix": "npm run prettier:fix",
     "prettier": "prettier --check . --ignore-path ./.prettierignore",
-    "prettier:fix": "prettier --write . --ignore-path ./.prettierignore"
+    "prettier:fix": "prettier --write . --ignore-path ./.prettierignore",
+    "start:server": "npx tinylicious@latest",
+    "test:jest": "start-server-and-test start:server 7070 jest"
   },
   "browserslist": {
     "production": [
@@ -46,6 +48,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react-scripts": "4.0.2",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "start-server-and-test": "^1.11.6",
+    "jest": "^26.6.3",
+    "jest-puppeteer": "^4.3.0",
+    "puppeteer": "^1.20.0"
   }
 }
