--- a/build.yml
+++ b/build.yml
@@ -7,79 +7,79 @@ pool:
   vmImage: ubuntu-latest
 
 parameters:
-- name: brainstorm
-  type: string
-  default: brainstorm
-- name: react-starter-template
-  type: string
-  default: react-starter-template
-- name: react-demo
-  type: string
-  default: react-demo
-- name: multi-framework-diceroller
-  type: string
-  default: multi-framework-diceroller
-- name: node-demo
-  type: string
-  default: node-demo
-- name: teams-fluid-hello-world
-  type: string
-  default: teams-fluid-hello-world
-- name: audience-demo
-  type: string
-  default: audience-demo
+  - name: examples\brainstorm
+    type: string
+    default: brainstorm
+  - name: examples\react-starter-template
+    type: string
+    default: react-starter-template
+  - name: examples\react-demo
+    type: string
+    default: react-demo
+  - name: examples\multi-framework-diceroller
+    type: string
+    default: multi-framework-diceroller
+  - name: examples\node-demo
+    type: string
+    default: node-demo
+  - name: examples\teams-fluid-hello-world
+    type: string
+    default: teams-fluid-hello-world
+  - name: examples\audience-demo
+    type: string
+    default: audience-demo
 
 trigger:
-- main
+  - main
 
 pr:
-- main
+  - main
 
 variables:
   skipComponentGovernanceDetection: true
 
 steps:
-- task: ComponentGovernanceComponentDetection@0
-  inputs:
-    scanType: 'Register'
-    verbosity: 'Verbose'
-    alertWarningLevel: 'High'
+  - task: ComponentGovernanceComponentDetection@0
+    inputs:
+      scanType: "Register"
+      verbosity: "Verbose"
+      alertWarningLevel: "High"
 
-- task: UseNode@1
-  displayName: Use Node 12.x
-  inputs: 
-    version: 12.x
+  - task: UseNode@1
+    displayname: examples\Use Node 12.x
+    inputs:
+      version: 12.x
 
-- ${{ each parameter in parameters }}:
-  - task: Npm@1
-    displayName: Install - ${{ parameter.Value }}
-    inputs:
-      command: 'custom'
-      workingDir: '${{ parameter.Value }}'
-      customCommand: 'install'
-  - task: Npm@1
-    displayName: Build - ${{ parameter.Value }}
-    inputs:
-      command: 'custom'
-      workingDir: ${{ parameter.Value }}
-      customCommand: 'run build'
-  - task: Npm@1
-    displayName: Lint - ${{ parameter.Value }}
-    inputs:
-      command: 'custom'
-      workingDir: ${{ parameter.Value }}
-      customCommand: 'run lint'
-  - task: Npm@1
-    displayName: Test - ${{ parameter.Value }}
-    inputs:
-      command: 'custom'
-      workingDir: ${{ parameter.Value }}
-      customCommand: 'run test:report'
-  - task: PublishTestResults@2
-    displayName: Publish Test Results - ${{ parameter.Value }}
-    inputs:
-      testResultsFormat: 'JUnit'
-      testResultsFiles: '**/*junit-report.xml'
-      searchFolder: ${{ parameter.Value }}/nyc
-      mergeTestResults: true
-    condition: succeededOrFailed()
+  - ${{ each parameter in parameters }}:
+      - task: Npm@1
+        displayname: examples\Install - ${{ parameter.Value }}
+        inputs:
+          command: "custom"
+          workingDir: "${{ parameter.Value }}"
+          customCommand: "install"
+      - task: Npm@1
+        displayname: examples\Build - ${{ parameter.Value }}
+        inputs:
+          command: "custom"
+          workingDir: ${{ parameter.Value }}
+          customCommand: "run build"
+      - task: Npm@1
+        displayname: examples\Lint - ${{ parameter.Value }}
+        inputs:
+          command: "custom"
+          workingDir: ${{ parameter.Value }}
+          customCommand: "run lint"
+      - task: Npm@1
+        displayname: examples\Test - ${{ parameter.Value }}
+        inputs:
+          command: "custom"
+          workingDir: ${{ parameter.Value }}
+          customCommand: "run test:report"
+      - task: PublishTestResults@2
+        displayname: examples\Publish Test Results - ${{ parameter.Value }}
+        inputs:
+          testResultsFormat: "JUnit"
+          testResultsFiles: "**/*junit-report.xml"
+          searchFolder: ${{ parameter.Value }}/nyc
+          mergeTestResults: true
+        condition: succeededOrFailed()
