--- a/multi-framework-diceroller/package.json
+++ b/multi-framework-diceroller/package.json
@@ -10,7 +10,7 @@
         "build:dev": "webpack --env clean",
         "start": "concurrently \"npm:start:server\" \"npm:start:client\"",
         "start:client": "webpack serve",
-        "start:server": "npx tinylicious",
+        "start:server": "npx @fluidframework/azure-local-service@latest",
         "format": "npm run prettier:fix",
         "lint": "npm run prettier",
         "lint:fix": "npm run prettier:fix",
