--- a/examples/react-demo/package.json
+++ b/examples/react-demo/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test",
+    "start:server": "npx tinylicious@latest",
+    "test": "start-server-and-test start:server 7070 jest",
     "test:report": "echo No test for this example",
     "format": "npm run prettier:fix",
     "lint": "npm run prettier",
@@ -38,7 +39,11 @@
     "@fluidframework/tinylicious-client": "^1.3.0",
     "fluid-framework": "^1.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "jest": "^26.6.3",
+    "jest-puppeteer": "^4.3.0",
+    "puppeteer": "^1.20.0",
+    "start-server-and-test": "^1.11.6"
   },
   "devDependencies": {
     "@fluidframework/build-common": "^1.0.0",
