--- a/examples/angular-demo/package.json
+++ b/examples/angular-demo/package.json
@@ -1,45 +1,39 @@
 {
-  "name": "@fluid-example/angular-demo",
-  "version": "0.1.0",
-  "homepage": "https://fluidframework.com",
-  "repository": "microsoft/FluidExamples",
-  "license": "MIT",
-  "author": "Microsoft and contributors",
+  "name": "angular-demo",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "format": "npm run prettier:fix",
-    "lint": "npm run prettier",
-    "lint:fix": "npm run prettier:fix",
-    "prettier": "prettier --check . --ignore-path ./.prettierignore",
-    "prettier:fix": "prettier --write . --ignore-path ./.prettierignore"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.11",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/forms": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
-    "@fluidframework/tinylicious-client": "^1.3.0",
-    "fluid-framework": "^1.3.0",
+    "@angular/animations": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@fluidframework/build-common": "^1.0.0",
-    "@angular-devkit/build-angular": "~13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.11",
-    "@types/debug": "^4.1.5",
-    "@types/node": "^14.18.0",
-    "typescript": "~4.5.5",
-    "prettier": "^2.7.1"
+    "@angular-devkit/build-angular": "~13.2.6",
+    "@angular/cli": "~13.2.6",
+    "@angular/compiler-cli": "~13.2.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.5.2"
   }
 }
